# cookiecutter-hipster-pypackage

./: cookiecutter.json
hooks/: post_gen_project.sh
{{cookiecutter.dist_name}}/: README.md  mkdocs.yml  pyproject.toml
{{cookiecutter.dist_name}}/.github/workflows/: build.yml  documentation.yml  test.yml
{{cookiecutter.dist_name}}/conda/: meta.yaml
{{cookiecutter.dist_name}}/{{cookiecutter.package_name}}/: __init__.py
